sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
    while(isSmaller(i+1,i)){
      swap(i,i+1);
    }
  }
}